# dual_autodiff

./: .gitignore  Answer_Exercises.ipynb  Dual_Autodiff_Notebook.ipynb  README.md  Untitled-1.py  dual_autodiff.ipynb  pyproject.toml  setup.py
docs/: Solutions.ipynb  conf.py  dual_autodiff.ipynb  index.rst  requirements.txt
docs/_build/doctrees/: Solutions.doctree  dual_autodiff.doctree  environment.pickle  index.doctree
docs/_build/doctrees/nbsphinx/: dual_autodiff.ipynb
docs/_build/doctrees/pag/: api_reference.doctree  introduction.doctree  quick_start.doctree  usage.doctree
docs/_build/html/: .buildinfo  Solutions.html  dual_autodiff.html  dual_autodiff.ipynb  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: dual_autodiff.ipynb.txt
docs/_build/html/_sources/pag/: api_reference.rst.txt  quick_start.rst.txt
docs/_build/html/pag/: api_reference.html  introduction.html  quick_start.html  usage.html
docs/pag/: api_reference.rst  introduction.rst  quick_start.rst  usage.rst
dual_autodiff/: __init__.py  dual.py  n_diff.py
report/: Report_C1.pdf:Zone.Identifier  Report_C1_finished.pdf:Zone.Identifier
src/dual_autodiff/: __init__.py  n_diff.py
src/dual_autodiff_x/: dual.c  dual.pyx  n_diff.c  n_diff.pyx
src/dual_autodiff_x.egg-info/: SOURCES.txt
src/tests/: __init__.py  test_dad.py  test_ndiff.py
tests/: __init__.py  test_dad.py  test_ndiff.py
wheel_contents/dual_autodiff_x/: __init__.py  version.py
wheel_contents/dual_autodiff_x-0.1.0.dist-info/: METADATA  RECORD
wheelhouse/: dual_autodiff_x-0.1.0-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
