[tool.poetry]
name = "dual_autodiff"
version = "0.1.0"
description = "This is a Python package designed to implement automatic differentiation using dual numbers."
authors = ["Matteo Mancini <mem97@cam.ac.uk>"]
license = "Unilicense"

[tool.poetry.dependencies]
python = "^3.12.3"
#Once the full code is ready add any dependencies here, e.g., numpy = "^1.21.0"
numpy = "^1.26.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
cython = "^3.0.11"

[build-system]
requires = ["poetry-core>=1.0.0", "wheel", "cython"]
build-backend = "poetry.core.masonry.api"

