[tool.poetry]
name = "dual_autodiff"
version = "0.1.0"
description = "This is a Python package designed to implement automatic differentiation using dual numbers."
authors = ["Matteo Mancini <mem97@cam.ac.uk>"]
license = "Unilicense"

[tool.poetry.dependencies]
python = "^3.12.3"

numpy = ">=1.26.4,<2.0.0"
pandas = ">=2.0.0,<3.0.0"
matplotlib = ">=3.9.0,<4.0.0"



[tool.poetry.dev-dependencies]
pytest = "^6.2"
sphinx = "^8.1.3"

[tool.poetry.extras]
notebooks = ["jupyter", "matplotlib", "pandas", "ipywidgets"]



[build-system]
requires = ["setuptools>=42", "wheel", "Cython", "build"]
build-backend = "setuptools.build_meta"
