[tool.poetry]
name = "dual_autodiff"
version = "0.1.0"
description = "This is a Python package designed to implement automatic differentiation using dual numbers."
authors = ["Matteo Mancini <mem97@cam.ac.uk>"]
license = "Unilicense"

[tool.poetry.dependencies]
python = ">=3.8, <4.0"

numpy = ">=1.26.4,<2.0.0"
pandas = ">=2.0.0,<3.0.0"
matplotlib = ">=3.9.0,<4.0.0"

sphinx = ">=4.0.0, <5.0.0; python_version < '3.10'"
sphinx-rtd-theme = ">=1.0.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.extras]
notebooks = ["jupyter", "matplotlib", "pandas", "ipywidgets"]
docs = ["sphinx>=7.0", "sphinx-rtd-theme>=0.5", "myst-parser>=0.15", "sphinx-gallery>=0.11.1", "nbsphinx>=0.9.3", "pylatex>=1.0"]

[build-system]
requires = ["setuptools>=42", "wheel", "Cython", "build"]
build-backend = "setuptools.build_meta"
